--- a/pipeline.gocd.yaml
+++ b/pipeline.gocd.yaml
@@ -44,7 +44,7 @@ pipelines:
     environment_variables:
       RANCHER_URL: https://rancher.hutter.cloud:8080
       # you can get the service id from the api view in rancher
-      SERVICE_NAME: pizza
+      SERVICE_NAME: pizza-api
     stages:
       - Deploy:
           jobs:
